<TableLayout xmlns:android="http://schemas.android.com/apk/res/android" android:id="@+id/tablelayoutResult"
    xmlns:tools="http://schemas.android.com/tools" android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent" android:layout_margin="10dp"
    tools:context="com.example.nghiatrinh.tinhls.Result">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content" android:layout_marginBottom="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:text="@string/result_amount"/>
        <TextView
            android:layout_width="wrap_content" android:id="@+id/tv_resultAmount"
            android:layout_height="wrap_content" android:layout_marginStart="20dp" android:layout_marginLeft="20dp" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content" android:layout_marginBottom="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:text="@string/result_interest_rate"/>
        <TextView
            android:layout_width="wrap_content"
            android:id="@+id/tv_interest"
            android:layout_height="wrap_content" android:layout_marginStart="20dp" android:layout_marginLeft="20dp"/>

    </TableRow>

    <TableRow android:id="@+id/tv_result_number_of_month_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" android:layout_marginBottom="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:text="@string/result_nuber_of_month"/>
        <TextView
            android:layout_width="wrap_content" android:id="@+id/tv_result_number_of_month"
            android:layout_height="wrap_content" android:layout_marginStart="20dp" android:layout_marginLeft="20dp" />

    </TableRow>

    <TableRow android:id="@+id/tv_resultFromDate_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" android:layout_marginBottom="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:text="@string/result_fromDate"/>
        <TextView
            android:layout_width="wrap_content" android:id="@+id/tv_resultFromDate"
            android:layout_height="wrap_content" android:layout_marginStart="20dp" android:layout_marginLeft="20dp" />

    </TableRow>
    <TableRow android:id="@+id/tv_resultToDate_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" android:layout_marginBottom="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:text="@string/result_toDate"/>
        <TextView
            android:layout_width="wrap_content" android:id="@+id/tv_resultToDate"
            android:layout_height="wrap_content" android:layout_marginStart="20dp" android:layout_marginLeft="20dp" />

    </TableRow>
    <TableRow android:id="@+id/tv_resultNumberOfDate_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" android:layout_marginBottom="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:text="@string/result_nuber_of_date"/>
        <TextView
            android:layout_width="wrap_content" android:id="@+id/tv_resultNumberOfDate"
            android:layout_height="wrap_content" android:layout_marginStart="20dp" android:layout_marginLeft="20dp" />

    </TableRow>
    <TableRow android:layout_width="match_parent" android:layout_height="1dp" android:background="#000000" android:layout_marginBottom="10dp">
        <TextView android:layout_width="match_parent" android:layout_span="2" android:layout_height="1dp" android:background="#000000"></TextView>
    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content" android:layout_marginBottom="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:text="@string/result_interest_amount"/>
        <TextView
            android:layout_width="wrap_content" android:id="@+id/tv_resultInterestTotal"
            android:layout_height="wrap_content" android:layout_marginStart="20dp" android:layout_marginLeft="20dp" />

    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content" android:layout_marginBottom="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:text="@string/result_total"/>
        <TextView
            android:layout_width="wrap_content" android:id="@+id/tv_resultTotal"
            android:layout_height="wrap_content" android:layout_marginStart="20dp" android:layout_marginLeft="20dp" />

    </TableRow>

</TableLayout>
