<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:orientation="vertical" tools:context=".MainActivity"
    android:layout_margin="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/amount"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtInputAmount"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/interest_rate"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">
            <EditText
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:id="@+id/txtInterestRate"/>
            <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <RadioButton
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/byMonth"
                    android:id="@+id/rdoByMonth"
                    android:checked="true" />
                <RadioButton
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/byYear"
                    android:id="@+id/rdoByYear"/>
            </RadioGroup>
        </LinearLayout>
        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" android:layout_marginTop="30dp">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/calculateByMonth"
                android:id="@+id/rdoCalculateByMonth" android:onClick="showCalculateByMonthDialog" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/txt_numberOfMonth_left"
                android:layout_marginLeft="10dp" android:text="( " android:visibility="invisible"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/txt_numberOfMonth" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/txt_numberOfMonth_right"
                android:text=" tháng)" android:visibility="invisible" android:layout_marginRight="30dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/tv_Fromdate"
                android:visibility="invisible" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/tv_Todate"
                android:visibility="invisible" />
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/calculateByDays"
                android:id="@+id/rdoCalculateByDays" android:onClick="showCalculateByDaysDialog"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/txt_numberOfDays_left"
                android:layout_marginLeft="10dp" android:text="( " android:visibility="invisible"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/txt_numberOfDays" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/txt_numberOfDays_right"
                android:text=" tháng)" android:visibility="invisible" android:layout_marginRight="30dp"/>
        </RadioGroup>

    <Button
        style="@style/ButtonText"
        android:background="@drawable/btn_blue"
        android:text="@string/Calculate"
        android:onClick="Calculate"/>
</LinearLayout>
