<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/put_date" android:layout_marginLeft="20dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" android:layout_marginLeft="20dp" android:layout_marginRight="20dp">
        <EditText
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:ems="10"
            android:id="@+id/txtPutDate"
            android:enabled="false"/>
        <Button
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:gravity="center"
            android:textColor="#ffffff"
            android:textSize="10dp"
            android:background="@drawable/btn_blue"
            android:text="@string/chooseDate"
            android:id="@+id/btnPutDate"/>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/withdraw_date" android:layout_marginLeft="20dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" android:layout_marginLeft="20dp" android:layout_marginRight="20dp">
        <EditText
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:ems="10"
            android:enabled="false"
            android:id="@+id/txtWithDrawDate"/>
        <Button
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:gravity="center"
            android:textColor="#ffffff"
            android:textSize="10dp"
            android:background="@drawable/btn_blue"
            android:text="@string/chooseDate"
            android:id="@+id/btnWithDrawDate"/>
    </LinearLayout>
    <Button
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:gravity="center"
        android:textColor="#ffffff"
        android:textSize="10dp"
        android:background="@drawable/btn_blue"
        android:text="OK"
        android:layout_margin="20dp"
        android:id="@+id/btnOKInCalculateByDays"/>
</LinearLayout>